Bug 78300 - Other: Corrupt: ErrorMessage - Can not put drawing objects into a text box, callout, comment, footnote or endnote.
Summary: Other: Corrupt: ErrorMessage - Can not put drawing objects into a text box, c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Priyanka Gaikwad
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-05 13:13 UTC by Priyanka Gaikwad
Modified: 2014-05-15 10:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Docx cantains wordart (14.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-05 13:13 UTC, Priyanka Gaikwad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Priyanka Gaikwad 2014-05-05 13:13:30 UTC
Created attachment 98484 [details]
Docx cantains wordart

Problem description: 

Steps to reproduce:
1. Open issue file in LO
2. Roundtrip to DOCX
3. Open round tripped file in MS Word

Current behavior:
While opening RT file in MS Word gives error message as "Can not put drawing objects into a text box, callout, comment, footnote or endnote."

Expected behavior:
File should open without the error message.
              
Operating System: All
Version: 4.3.0.0.alpha1
Comment 1 Jorendc 2014-05-05 16:45:41 UTC
Repro, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: 82a623fb08afc72decb78f061b751a43ae503678
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-05_06:37:16

Kind regards,
Joren
Comment 2 Commit Notification 2014-05-15 07:35:09 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=350b88c2b7871eb34f945f2ada7b03717f661bdc

fdo#78300 File Corrupt:drawing objects into a text box.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.