fdo#78300 File Corrupt:drawing objects into a text box.

Description :
Docx file corrupt after roundtrip.
LO insert <w:drawing> inside the <wps:txbx> under choice after RT,
if the file created in MS word 2007 and contains Word Art inside the text box.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
	sw/source/filter/ww8/docxsdrexport.cxx
	sw/source/filter/ww8/docxsdrexport.hxx

Change-Id: I7421ed353cd7e9bae17b2447122090a4113f52b5